# rs-market

./: .env.example  Cargo.toml  Justfile  LICENSE.md  README.md  docker-compose.yml  rs-market.toml
.sqlx/: query-11086ed564daf5c9edb3a891a42f4a1f3a7825d56b9acdc72af59fed69868459.json  query-6a01334eab804076156f334b11ba75189801119702fab432677f852f507072c7.json  query-71acd3222ea84ba93559dc80d5b4635989ed488461f68b7cbd86cc4a933c172e.json
crates/monolith/: Cargo.toml
crates/monolith/src/: main.rs
crates/rs-server/: Cargo.toml
crates/rs-server/migrations/: 20260204231222_genesis.sql
crates/rs-server/src/: config.rs  lib.rs
crates/rs-server/src/db/: gift_card.rs  mod.rs
crates/rs-server/src/models/: gift_card.rs  mod.rs
crates/rs-server/src/services/: gift_card.rs  mod.rs
