[package]
name = "rs-server"
edition = { workspace = true }

[dependencies]
uuid = { workspace = true }
time = { workspace = true }
rust_decimal = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
sqlx = { workspace = true }
config = { workspace = true }
dotenvy = { workspace =  true }
serde = { workspace =  true }